<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_margin="32dp"
        android:background="@drawable/card_bg"
        android:elevation="4dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="?attr/android:textColorPrimary"
            android:layout_marginBottom="24dp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:background="@drawable/edittext_bg"
            android:textColor="?attr/android:textColorPrimary"
            android:textColorHint="?attr/android:textColorSecondary"
            android:layout_marginBottom="16dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            android:padding="12dp"
            android:background="@drawable/edittext_bg"
            android:textColor="?attr/android:textColorPrimary"
            android:textColorHint="?attr/android:textColorSecondary"

            android:importantForAutofill="no" />
        <CheckBox
            android:id="@+id/mantenerSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mantenerSesion_chkbx"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="42dp"
            android:layout_marginTop="12dp"
            />
        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="?attr/colorOnPrimary"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/registrarse"
            android:textAllCaps="false"
            android:backgroundTint="?attr/colorSecondary"
            android:textColor="?attr/colorOnSecondary" />
    </LinearLayout>
</FrameLayout>
