<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="24dp"
        android:background="@drawable/card_bg"
        android:elevation="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="48dp">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear_cuenta"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_marginBottom="32dp" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/nombre_completo"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:background="@drawable/edittext_bg"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no" />

        <!-- TextView para mostrar el error del nombre -->
        <TextView
            android:id="@+id/nameError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:background="@drawable/edittext_bg"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no" />

        <!-- TextView para mostrar el error del correo -->
        <TextView
            android:id="@+id/emailError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            android:layout_marginBottom="16dp"/>

        <Spinner
            android:id="@+id/genderSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bg"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            android:padding="16dp"
            android:background="@drawable/edittext_bg"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no" />

        <!-- TextView para mostrar el error de la contraseña -->
        <TextView
            android:id="@+id/passError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/confirmar_pass"
            android:inputType="textPassword"
            android:padding="16dp"
            android:background="@drawable/edittext_bg"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no" />

        <!-- TextView para mostrar el error de la confirmación de contraseña -->
        <TextView
            android:id="@+id/confirmPassError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            android:layout_marginBottom="32dp"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/registrarse"
            android:textAllCaps="false"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="?attr/colorOnPrimary"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/cancelar"
            android:textAllCaps="false"
            android:backgroundTint="?attr/colorError"
            android:textColor="?attr/colorOnSecondary" />
    </LinearLayout>
</ScrollView>
